added register link in register section; added reverb logo to top

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header>
       <img id="logo" src="./assets/reverb_logo.png">
       <nav id="desktop">
-        <span><a href="#about">About</a></span>
+        <span><a href="#about" class="active">About</a></span>
         <span><a href="#guests">Featured Guests</a></span>
         <span><a href="#packing">Packing List</a></span>
         <span><a href="#schedule">Schedule</a></span>
@@ -48,9 +48,10 @@
 
     <div class="cover">
       <!-- <div class="cover-flex"> -->
-        <h1>Reverb 2017</h1>
-        <h1>Experience the Power and Presence of God</h1>
-        <a href="#">Register</a>
+      <img src="assets/reverb_logo.png" />
+        <!-- <h1>Reverb 2017</h1>
+        <h1>Experience the Power and Presence of God</h1> -->
+        <a href="https://www.eiseverywhere.com/ereg/index.php?eventid=294111&" target="_blank">Register</a>
       <!-- </div> -->
     </div>
 
@@ -263,6 +264,10 @@
             We have a cafe with snacks and merchandise available for sale.
           </p>
 
+          <a href="https://www.eiseverywhere.com/ereg/index.php?eventid=294111&" target="_blank">Register</a>
+
+          <!-- <a href="https://www.eiseverywhere.com/ereg/index.php?eventid=294111&" target="_blank">Register</a> -->
+
           <!-- <a href="#">Register</a> -->
 
         </div>
@@ -271,134 +276,19 @@
 
 
 
-      <!-- <div id="about" class="about">
-        <h2>What To Bring</h2>
-        <ul class="white no-list-type">
-          <li>Clothes (don't forget PJs)</li>
-          <li>Coat/gloves/hat</li>
-          <li>Sleeping Bag/Pillow (beds don't have sheets)</li>
-          <li>Swimsuit (one piece/tankinis only)</li>
-          <li>Gym Clothes</li>
-          <li>Shower stuff</li>
-          <li>Towel</li>
-          <li>Any necessary medications</li>
-          <li>Extra money (cafe, book table, etc.)</li>
-          <li>Cell phone/iPods/etc (you're responsible for them)</li>
-        </ul>
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script> -->
 
-        <h2 class="pt-25">When is Reverb?</h2>
-        <p class="times">
-          <span class="b">Date:</span> Feb 23-25 |
-          <span class="b">Cost:</span> $140 (before Feb 5th) |
-          <span class="b">Where:</span> <a href="http://www.lakewilliamson.org" target="_blank" class="white">Lake Williamson Retreat Center</a>
-        </p>
-      </div> -->
-
-
-
-
-      <!--
-      <div class="tc">
-      <h1 class="white">What To Bring</h1>
-      <ul class="white no-list-type">
-        <li>Clothes (don't forget PJs)</li>
-        <li>Coat/gloves/hat</li>
-        <li>Sleeping Bag/Pillow (beds don't have sheets)</li>
-        <li>Swimsuit (one piece/tankinis only)</li>
-        <li>Gym Clothes</li>
-        <li>Shower stuff</li>
-        <li>Towel</li>
-        <li>Any necessary medications</li>
-        <li>Extra money (cafe, book table, etc.)</li>
-        <li>Cell phone/iPods/etc (you're responsible for them)</li>
-      </ul>
-
-      <h1 class="white">What Not To Bring</h1>
-      <ul class="white no-list-type">
-        <li>Fireworks</li>
-        <li>Cigarettes</li>
-        <li>Alcohol</li>
-        <li>Drugs</li>
-        <li>Or any other bad things</li>
-      </ul>
-      </div>
-    -->
-
-
-      <!--
-
-      <p class="tc fl w-100 pa2 white">
-        <span class="b">Date:</span> Feb 23-25 |
-        <span class="b">Cost:</span> $140 (before Feb 5th) |
-        <span class="b">Where:</span> <a href="http://www.lakewilliamson.org" target="_blank" class="white">Lake Williamson Retreat Center</a>
-      </p>
-
-      <p class="pa2 white">
-        Reverb is the annual Regional Vineyard Conference for students 6th-12th grade.
-        The purpose of this conference is to gather Vineyard Youth Ministries from all
-        around the Midwest (and beyond) to extend the Kingdom, to bring life to our students,
-        and to experience the power and presence of God. We welcome
-        groups of all sizes to join us for this fun, action-packed weekend!
-      </p>
-
-      <div class="tc">
-        <button class="tc f3"><a class="no-underline black" href="#">Registration coming soon</a></button>
-      </div>
-
-      <h1 class="white tc">Keynote Speaker</h1>
-      <div>
-        <div class="pics fl w-30 pa2 mt5">
-          <img class="" src="assets/jeremiah.jpg">
-        </div>
-        <div class="white fl w-70 pa2 lh-title">
-          <h3 class="white bold">Jeremiah Carlson</h3>
-          Jeremiah with his wife Kara have 3 amazing kids (Emberlin, Lovelin and Valor) and are passionate
-          about seeing people become authentic disciples of Jesus. He was the youth/young adult pastor at
-          the Vancouver Vineyard Church in Vancouver, WA for 10 years as well as the Vineyard Movements
-          NW Youth Task Force Director for 6 years. He is also the lead singer and song writer for the
-          internationally renown worship band "The Neverclaim". He is a champion and preacher for revival
-          over the next generation and has a passion to call out peoples true identity and dreams in Christ.
-        </div>
-      </div>
-      <div class="cf"></div>
-      <h1 class="tc white">Worship Leader</h1>
-      <div>
-        <div class="white tr fl w-70 pa2 lh-title">
-          <h3 class="white bold">Kyle Howard</h3>
-        Kyle's deepest passions are to see people encounter the loving presence
-        of the Father and for people to walk in the fullness of who they were
-        made to be as sons and daughters of the living God. Kyle began leading
-        worship over 10 years ago in his youth ministry at the age of 14. He is
-        featured on worship albums for the National Vineyard and VWorship.
-        Kyle now serves on staff at The Vineyard Church of Central Illinois
-        as Worship Pastor. When he isn't leading worship, Kyle loves to play
-        basketball, golf, and hangout with friends.
-        </div>
-        <div class="fl w-30 pa2 mt5">
-          <img class="pics" src="assets/kyle.jpg">
-        </div>
-      </div>
-      <div class="cf"></div>
-
-      <br /><br />
-      <p class="white tc">For more information, contact Leah Wenger at <a class="white" href="mailto:leah.wenger@thevineyardchurch.us">leah.wenger@thevineyardchurch.us</a></p>
-
-
-      <br />
-      <footer class="bt bwhite">
-        <br />
-        <div class="vineyard_logo">
-          <a class="footer" href="http://thevineyardchurch.us" target="_blank"><img src="assets/vineyard_logo.png"></a>
-        </div>
-      </footer>
-      <br /> -->
-
-    <!-- </div> -->
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script> -->
 
   </body>
+
+  <script>
+
+    // $().ready ({
+    //
+    // });
+
+  </script>
+
 </html>
