added speakers page

--- a/speakers.html
+++ b/speakers.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
 
-    <title>Reverb | About</title>
+    <title>Reverb | Speakers</title>
   </head>
   <body style="background-color: #f0f0f0;">
 
@@ -44,10 +44,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"> <!-- active" -->
-                <a class="nav-link active" href="about.html">About</a> <!-- span class="sr-only">(current)</span></a -->
+                <a class="nav-link" href="about.html">About</a> <!-- span class="sr-only">(current)</span></a -->
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="speakers.html">Speakers</a>
+                <a class="nav-link active" href="speakers.html">Speakers</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="schedule.html">Schedule</a>
