--- a/schedule.html
+++ b/schedule.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
 
-    <title>Reverb</title>
+    <title>Reverb | Schedule</title>
   </head>
   <body style="background-color: #000;">
 
@@ -46,10 +46,10 @@
                 <a class="nav-link" href="about.html">About</a> <!-- span class="sr-only">(current)</span></a -->
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Speakers</a>
+                <a class="nav-link" href="speakers.html">Speakers</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Schedule</a>
+                <a class="nav-link active" href="schedule.html">Schedule</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Store</a>
