--- a/index.html
+++ b/index.html
@@ -35,20 +35,37 @@
 
     <title>Reverb</title>
   </head>
-  <body style="overflow: hidden;">
+  <body style="overflow: hidden; background-color: black;">
 
-    <!-- <div class="nav"> -->
-      <nav class="nav navbar fixed-top navbar-expand-lg navbar-dark" ><!-- style="background-color: black;"> -->
-        <!-- <div class="container"> -->
+    <nav class="nav navbar navbar-dark" >
+        <a class="navbar-brand" href="index.html"><img src="./assets/reverb_logo.png"/></a>
+        <span style="cursor: pointer; font-size: 40px; color: white;" onclick="openNav()">&#9776;</span>
+    </nav>
+
+    <div id="myNav" class="overlay">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <div class="overlay-content">
+        <a href="about.html">About</a>
+        <a href="speakers.html">Schedule</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="#">Register</a>
+        <a href="#">Store</a>
+      </div>
+    </div>
+
+      <!-- <nav class="nav navbar fixed-top navbar-dark" > // style="background-color: black;">
           <a class="navbar-brand" href="index.html"><img src="./assets/reverb_logo.png"/></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                   aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+
+
+
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item"> <!-- active" -->
-                <a class="nav-link" href="about.html">About</a> <!-- span class="sr-only">(current)</span></a -->
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>  /// span class="sr-only">(current)</span></a
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="speakers.html">Speakers</a>
@@ -64,11 +81,10 @@
               </li>
             </ul>
           </div>
-        <!-- </div> -->
-      </nav>
-    <!-- </div> -->
 
-    <header class="v-header v-container">
+      </nav> -->
+
+    <!-- <header class="v-header v-container">
 
       <div class="fullscreen-video-wrap">
         <video src="./assets/street.mov" autoplay="true" loop="true" muted="true">
@@ -76,17 +92,10 @@
       </div>
 
       <div class="header-content rellax">
-        <h1 class="pb-3 display-4 text-uppercase">Reverb Conference</h1>
+        <h1 class="pb-3 display-4 text-uppercase">Youth Conf</h1>
         <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Register</a>
-
-        <!-- <div class="arrow">
-          <i class="down"></i>
-        </div> -->
       </div>
-
-
-
-    </header>
+    </header> -->
 
     <!-- <div id="about" class="container-md">
           <h2 class="text-center mt-5">What is Reverb?</h2>
@@ -157,6 +166,18 @@
             });
         });
       });
+
+      function openNav() {
+          document.getElementById("myNav").style.width = "100%";
+      }
+
+      function closeNav() {
+          document.getElementById("myNav").style.width = "0%";
+      }
+
+      function alert() {
+        alert("Hello");
+      }
 
       // parallax
       var rellax = new Rellax(".rellax");
