changing nav - changed bg colors

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <title>Reverb</title>
   </head>
-  <body style="overflow: hidden; background-color: black;">
+  <body style="overflow: hidden; background: linear-gradient(to bottom right, #5b247a, #1bcedf);">
 
     <nav class="nav navbar navbar-dark" >
         <a class="navbar-brand" href="index.html"><img src="./assets/reverb_logo.png"/></a>
@@ -45,8 +45,9 @@
     <div id="myNav" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <div class="overlay-content">
+        <a href="index.html"><img src="./assets/reverbpng.png" /></a>
         <a href="about.html">About</a>
-        <a href="speakers.html">Schedule</a>
+        <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
         <a href="#">Register</a>
         <a href="#">Store</a>
