--- a/about.html
+++ b/about.html
@@ -32,37 +32,26 @@
 
     <title>Reverb | About</title>
   </head>
-  <body style="background-color: #f0f0f0;">
+  <body style="background: linear-gradient(to bottom right, #f54ea2, #ff7676);">
 
-    <!-- <div class="nav"> -->
-      <nav class="nav navbar fixed-top navbar-expand-lg navbar-dark nav-background"><!-- style="background-color: black;"> -->
-        <!-- <div class="container"> -->
-          <a class="navbar-brand" href="index.html"><img src="./assets/reverb_logo.png"/></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item"> <!-- active" -->
-                <a class="nav-link active" href="about.html">About</a> <!-- span class="sr-only">(current)</span></a -->
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="speakers.html">Speakers</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="schedule.html">Schedule</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Store</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Register</a>
-              </li>
-            </ul>
-          </div>
-        <!-- </div> -->
-      </nav>
-    <!-- </div> -->
+
+    <nav class="nav navbar navbar-dark" >
+        <a class="navbar-brand" href="index.html"><img src="./assets/reverb_logo.png"/></a>
+        <span style="cursor: pointer; font-size: 40px; color: white;" onclick="openNav()">&#9776;</span>
+    </nav>
+
+    <div id="myNav" class="overlay">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <div class="overlay-content">
+        <a href="index.html"><img src="./assets/reverbpng.png" /></a>
+        <a href="about.html">About</a>
+        <a href="speakers.html">Speakers</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="#">Register</a>
+        <a href="#">Store</a>
+      </div>
+    </div>
+
 
     <div id="speakers" class="container speakers">
 
@@ -103,6 +92,14 @@
       });
 
       */
+
+      function openNav() {
+          document.getElementById("myNav").style.width = "100%";
+      }
+
+      function closeNav() {
+          document.getElementById("myNav").style.width = "0%";
+      }
 
       // parallax
       var rellax = new Rellax(".rellax");
