--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
     <nav class="nav navbar navbar-dark" >
         <a class="navbar-brand" href="index.html"><img src="./assets/reverb_logo.png"/></a>
-        <!-- <span style="cursor: pointer; font-size: 40px; color: white;" onclick="openNav()">&#9776;</span> -->
+        <a href="#" class="register-nav ml-auto">Register</a>
         <div class="menu-container" onclick="openNav()">
           <div class="bar1"></div>
           <div class="bar2"></div>
