mobile responsive stuff for video

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 
     <nav class="nav navbar" >
         <a class="navbar-brand" href="index.html"><img src="./assets/reverb_logo.png"/></a>
-        <!-- <span style="cursor: pointer; font-size: 40px; color: white;" onclick="openNav()">&#9776;</span> -->
         <a href="#" class="register-nav ml-auto">Register</a>
         <div class="menu-container" onclick="openNav()">
           <div class="bar1"></div>
@@ -59,6 +58,16 @@
         <a href="#">Store</a>
       </div>
     </div>
+
+    <div class="homepage-container">
+      <iframe class="promo-video" src="https://player.vimeo.com/video/195321907"
+       frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
+      </iframe>
+      <div class="r-button">
+        <a class="btn btn-register" href="#">Register Now</a>
+      </div>
+    </div>
+
 
 
 
