--- a/index.html
+++ b/index.html
@@ -28,16 +28,20 @@
 
     <link rel="mask-icon" href="assets/rvb_pinned.svg" color="#1C2C40">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.17/css/uikit.min.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
 
+    <!-- UIkit JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.17/js/uikit.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.17/js/uikit-icons.min.js"></script>
+
     <title>Reverb</title>
   </head>
-  <body style="overflow: hidden; background: linear-gradient(to bottom right, #5b247a, #1bcedf);">
+  <body style="background: linear-gradient(to bottom right, #5b247a, #1bcedf);">
 
-    <nav class="nav navbar" >
+    <!-- <nav class="nav navbar" >
         <a class="navbar-brand" href="index.html"><img src="./assets/reverb_logo.png"/></a>
         <a href="#" class="register-nav ml-auto">Register</a>
         <div class="menu-container" onclick="openNav()">
@@ -66,7 +70,64 @@
       <div class="r-button">
         <a class="btn btn-register" href="#">Register Now</a>
       </div>
+    </div> -->
+
+
+    <!-- <nav class="uk-navbar-container uk-navbar-transparent uk-margin" uk-navbar>
+      <div class="uk-navbar-left">
+
+          <a class="uk-navbar-item uk-logo" href="#">Logo</a>
+      </div>
+      <div class="uk-navbar-right">
+
+          <a class="uk-navbar-toggle" uk-navbar-toggle-icon href=""></a>
+
+           <div class="uk-navbar-item">
+
+          </div>
+
+      </div>
+    </nav> -->
+<div class="uk-position-relative">
+  <div class="vh-75 uk-background-primary uk-background-blend-color-burn uk-background-primary uk-background-cover uk-background-norepeat" data-src="./assets/rvb_wrshp.jpg" uk-img uk-parallax="blur: 5;"></div>
+    <div class="uk-position-top">
+        <nav class="uk-navbar-container uk-navbar-transparent uk-light" uk-navbar>
+            <div class="uk-navbar-left">
+                <a class="uk-navbar-item uk-logo" href="#"><img src="./assets/reverb_nav.png" /></a>
+            </div>
+            <div class="uk-navbar-right">
+                <a class="uk-navbar-toggle" uk-navbar-toggle-icon href=""></a>
+                 <div class="uk-navbar-item">
+
+                </div>
+            </div>
+        </nav>
     </div>
+</div>
+
+
+<div class="uk-container">
+  <div uk-grid>
+      <div class="uk-width-1-3@m uk-text-right">
+        <h1>reverb youth conference 2019</h1>
+      </div>
+      <div class="uk-width-2-3@m">
+        <iframe class="promo-video" src="https://player.vimeo.com/video/291924387"
+          frameborder="0" allowfullscreen uk-responsive uk-video="automute: true; autoplay: false">
+        </iframe>
+      </div>
+  </div>
+</div>
+
+    <!-- <div class="vh-75 uk-background-primary uk-background-blend-color-burn uk-background-primary uk-background-cover uk-background-norepeat" data-src="./assets/rvb_wrshp.jpg" uk-img>...</div> -->
+
+
+    <!-- <div class="uk-flex uk-flex-center uk-flex-middle uk-flex-column uk-flex" style="height: 100vh">
+        <iframe class="promo-video" src="https://player.vimeo.com/video/291924387"
+          frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
+        </iframe>
+        <a class="register-threeD" href="#">Register Now</a>
+    </div> -->
 
 
 
@@ -74,12 +135,12 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script src="/assets/js/rellax.min.js"></script>
+    <!-- <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script> -->
+    <!-- delete this -> <script src="/assets/js/rellax.min.js"></script> -->
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
 
       $(document).ready(function(){
         var $nav = $('.nav');//Caching element
@@ -111,7 +172,7 @@
       // parallax
       var rellax = new Rellax(".rellax");
 
-    </script>
+    </script> -->
 
 
   </body>
