--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
     </nav> -->
 <div class="uk-position-relative">
-  <div class="vh-75 uk-background-primary uk-background-blend-color-burn uk-background-primary uk-background-cover uk-background-norepeat" data-src="./assets/rvb_wrshp.jpg" uk-img uk-parallax="blur: 5;"></div>
+  <div class="vh-50 uk-background-primary uk-background-blend-color-burn uk-background-primary uk-background-cover uk-background-norepeat" data-src="./assets/rvb_wrshp.jpg" uk-img uk-parallax="blur: 5;"></div>
     <div class="uk-position-top">
         <nav class="uk-navbar-container uk-navbar-transparent uk-light" uk-navbar>
             <div class="uk-navbar-left">
@@ -107,17 +107,79 @@
 
 
 <div class="uk-container">
-  <div uk-grid>
+  <div class="uk-margin-medium-top uk-margin-medium-bottom" uk-grid>
       <div class="uk-width-1-3@m uk-text-right">
-        <h1>reverb youth conference 2019</h1>
+        <h1 class="uk-heading-primary gradient-header">REVERB YOUTH CONFERENCE 2019</h1>
+        <p class="txt-white">Feb 15-17 | Lake Williamson Retreat Center <br/> $140</p>
+        <button class="uk-button uk-button-default uk-button-large uk-light">REGISTER NOW</button>
       </div>
       <div class="uk-width-2-3@m">
         <iframe class="promo-video" src="https://player.vimeo.com/video/291924387"
-          frameborder="0" allowfullscreen uk-responsive uk-video="automute: true; autoplay: false">
+          frameborder="0" allowfullscreen uk-responsive uk-video="autoplay: false">
         </iframe>
       </div>
   </div>
 </div>
+
+<div style="background: linear-gradient(to bottom right, #622774, #c53364);">
+  <div class="uk-container txt-white">
+    <div class="uk-margin-medium-top">
+      <h1 class="txt-white">WHAT’S THE POINT?</h1>
+      <p>
+        We are built to reverberate the sound of heaven in our everyday life.
+        Our heart is that an entire generation of young people would make,
+        “On earth as it is in Heaven” the cry of their heart. In the schools,
+        in the homes, on the teams, and in the world. Sons and Daughters so fixed
+        on the faithfulness of the Father that everything else in this world fades
+        away. Students from all over the country coming together to to experience
+        an encounter from Heaven that leaves them never the same. Join us this year
+        at Reverb Youth Conference 2019 “The Sound of Heaven.”
+      </p>
+    </div>
+
+    <div class="uk-margin-medium-top uk-margin-medium-bottom">
+      <h1 class="txt-white">WHO IS THIS FOR?</h1>
+      <p> Reverb Youth Conference is designed for students 6th-12th grade. Everything from
+        the fun engaging games to the inspiring messages and the life changing moments in worship.
+        Reverb exist to bring students from across the country into meaningful relationships with
+        new friends and grow their relationship with God.
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="uk-background-secondary">
+  <div class="uk-container">
+    <div class="uk-margin-medium-top uk-margin-bottom">
+      <h1 class="uk-heading-primary uk-text-center gradient-header">FEATURED GUESTS</h1>
+      <div class="uk-text-center uk-light uk-child-width-1-2" uk-grid>
+        <div>
+         <img class="guest-shot" src="./assets/Brandon.png" alt="" uk-image/>
+         <p>Brandon Henderson</p>
+        </div>
+        <div>
+          <img class="guest-shot" src="./assets/Samuel.png" alt="" uk-image/>
+          <p>Samuel Wordon</p>
+        </div>
+        <div>
+          <img class="guest-shot" src="./assets/Keirstyn.png" alt="" uk-image/>
+          <p>Keirstyn Wordon</p>
+        </div>
+        <div>
+          <img class="guest-shot" src="./assets/Kyle.png" alt="" uk-image/>
+          <p>Kyle Howard</p>
+        </div>
+      <!-- <div><div class="uk-card uk-card-default uk-padding-small" uk-parallax="target: #test-easing; y: 200; easing: 0.5">0.5</div></div>
+      <div><div class="uk-card uk-card-default uk-padding-small" uk-parallax="target: #test-easing; y: 200; easing: 0.6">0.6</div></div>
+      <div><div class="uk-card uk-card-default uk-padding-small" uk-parallax="target: #test-easing; y: 200; easing: 0.8">0.8</div></div> -->
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
 
     <!-- <div class="vh-75 uk-background-primary uk-background-blend-color-burn uk-background-primary uk-background-cover uk-background-norepeat" data-src="./assets/rvb_wrshp.jpg" uk-img>...</div> -->
 
